--- a/individual/pt_s215520.ipynb
+++ b/individual/pt_s215520.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "[145289 rows x 8 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -383,7 +383,7 @@
        "4    1985      25   1192      86   1447      74    H      0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -499,7 +499,7 @@
        "145288    2016     132   1386      87   1433      74    N      0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -529,7 +529,7 @@
        "(145289, 8)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -561,7 +561,7 @@
        "['Season', 'Daynum', 'Wteam', 'Wscore', 'Lteam', 'Lscore', 'Wloc', 'Numot']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -722,7 +722,7 @@
        "max      1464.000000     150.000000       6.000000  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -760,7 +760,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -790,7 +790,7 @@
        "186"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -820,7 +820,7 @@
        "64.49700940883343"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -850,7 +850,7 @@
        "24970"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -877,6 +877,7 @@
     {
      "data": {
       "text/plain": [
+       "Season\n",
        "2016    5369\n",
        "2014    5362\n",
        "2015    5354\n",
@@ -909,10 +910,10 @@
        "1987    3915\n",
        "1986    3783\n",
        "1985    3737\n",
-       "Name: Season, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,11 +932,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "df['Season'].nunique()"
    ]
   },
   {
@@ -948,11 +961,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Wteam\n",
+       "1181    819\n",
+       "1242    804\n",
+       "1246    765\n",
+       "1314    761\n",
+       "1112    746\n",
+       "       ... \n",
+       "1101     18\n",
+       "1446     14\n",
+       "1118      6\n",
+       "1289      6\n",
+       "1327      3\n",
+       "Name: count, Length: 364, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "df['Wteam'].value_counts()"
    ]
   },
   {
@@ -973,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -1030,7 +1067,7 @@
        "24970    1991      68   1258     186   1109     140    H      0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -1061,7 +1098,7 @@
        "Name: Lscore, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -1091,7 +1128,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -1113,7 +1150,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1142,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -1153,7 +1190,7 @@
        "140"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -1253,7 +1290,7 @@
        "2    1985      25   1112      63   1223      56    H      0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1264,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -1357,7 +1394,7 @@
        "3    1985      25   1165      70   1432      54    H      0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1384,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -1395,7 +1432,7 @@
        "140"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1414,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -1425,7 +1462,7 @@
        "140"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1460,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1566,7 +1603,7 @@
        "103660    2009      26   1326      59   1359      22    H      0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1585,11 +1622,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "season = df.sort_values('Season')\n",
+    "team = df.sort_values('Wteam')\n",
+    "score = df.sort_values('Wscore', ascending=False)\n",
+    "season = season.iloc[100:200, :1]\n",
+    "team = team.iloc[100:200, 2:3]\n",
+    "score = score.iloc[100:200, 3:4]"
    ]
   },
   {
@@ -1602,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1627,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -1888,7 +1931,7 @@
        "52600    1998      33   1395     153   1410      87    H      0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1907,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -2024,7 +2067,7 @@
        "52600    1998      33   1395     153   1410      87    H      0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2043,11 +2086,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "df['Dscore'] = df['Wscore'] - df['Lscore']\n",
+    "avg = df['Dscore'].sum()/df['Dscore'].count()\n",
+    "df_above_avg = df[df['Dscore'] > avg]"
    ]
   },
   {
@@ -2060,11 +2106,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44653    1996\n",
+      "Name: Season, dtype: int64\n",
+      "44653    1409\n",
+      "Name: Wteam, dtype: int64\n",
+      "44653    1341\n",
+      "Name: Lteam, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "highest_diff = df_above_avg.sort_values('Dscore', ascending=False).head(1)\n",
+    "print(highest_diff['Season'])\n",
+    "print(highest_diff['Wteam'])\n",
+    "print(highest_diff['Lteam'])\n"
    ]
   },
   {
@@ -2085,7 +2148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -2102,7 +2165,7 @@
        "Name: Wscore, dtype: float64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2121,7 +2184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -2140,10 +2203,10 @@
        "1103   H       324\n",
        "       A       153\n",
        "       N        41\n",
-       "Name: Wloc, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2162,7 +2225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -2170,16 +2233,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[1985, 20, 1228, ..., 64, 'N', 0],\n",
-       "       [1985, 25, 1106, ..., 70, 'H', 0],\n",
-       "       [1985, 25, 1112, ..., 56, 'H', 0],\n",
+       "array([[1985, 20, 1228, ..., 'N', 0, 17],\n",
+       "       [1985, 25, 1106, ..., 'H', 0, 7],\n",
+       "       [1985, 25, 1112, ..., 'H', 0, 7],\n",
        "       ...,\n",
-       "       [2016, 132, 1246, ..., 77, 'N', 1],\n",
-       "       [2016, 132, 1277, ..., 62, 'N', 0],\n",
-       "       [2016, 132, 1386, ..., 74, 'N', 0]], dtype=object)"
+       "       [2016, 132, 1246, ..., 'N', 1, 5],\n",
+       "       [2016, 132, 1277, ..., 'N', 0, 4],\n",
+       "       [2016, 132, 1386, ..., 'N', 0, 13]], dtype=object)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2198,7 +2261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -2209,7 +2272,7 @@
        "1985"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3041,7 +3104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.3"
   }
  },
  "nbformat": 4,
