--- a/individual/pt_s215520.ipynb
+++ b/individual/pt_s215520.ipynb
@@ -2291,11 +2291,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Season\n",
+       "1985    74.723040\n",
+       "1986    74.813640\n",
+       "1987    77.993870\n",
+       "1988    79.773704\n",
+       "1989    81.728511\n",
+       "1990    80.846477\n",
+       "1991    82.733932\n",
+       "1992    79.992004\n",
+       "1993    79.508790\n",
+       "1994    81.160345\n",
+       "1995    80.096149\n",
+       "1996    78.205483\n",
+       "1997    76.300842\n",
+       "1998    77.229902\n",
+       "1999    76.043581\n",
+       "2000    76.310467\n",
+       "2001    77.088650\n",
+       "2002    76.963557\n",
+       "2003    75.795061\n",
+       "2004    74.971122\n",
+       "2005    74.693690\n",
+       "2006    74.587555\n",
+       "2007    74.829467\n",
+       "2008    74.962425\n",
+       "2009    74.033721\n",
+       "2010    74.652480\n",
+       "2011    74.374190\n",
+       "2012    73.379973\n",
+       "2013    72.840789\n",
+       "2014    76.101268\n",
+       "2015    72.680799\n",
+       "2016    78.295958\n",
+       "Name: Wscore, dtype: float64"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "df.groupby('Season')['Wscore'].mean()"
    ]
   },
   {
@@ -2308,11 +2353,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Wteam\n",
+       "1101     95\n",
+       "1102    111\n",
+       "1103    109\n",
+       "1104    114\n",
+       "1105    114\n",
+       "       ... \n",
+       "1460    136\n",
+       "1461    112\n",
+       "1462    125\n",
+       "1463    105\n",
+       "1464    115\n",
+       "Name: Wscore, Length: 364, dtype: int64"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "df.groupby('Wteam')['Wscore'].max()"
    ]
   },
   {
@@ -2325,11 +2394,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Season  Wteam\n",
+       "1985    1102     71.000000\n",
+       "        1103     70.222222\n",
+       "        1104     72.095238\n",
+       "        1106     75.100000\n",
+       "        1108     85.842105\n",
+       "                   ...    \n",
+       "2016    1460     73.450000\n",
+       "        1461     73.416667\n",
+       "        1462     83.222222\n",
+       "        1463     78.238095\n",
+       "        1464     85.888889\n",
+       "Name: Wscore, Length: 10172, dtype: float64"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "df.groupby(['Season','Wteam'])['Wscore'].mean()"
    ]
   },
   {
