--- a/individual/pt_s215520.ipynb
+++ b/individual/pt_s215520.ipynb
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1645,9 +1645,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Wscore    11784\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write your code here"
    ]
@@ -2086,14 +2098,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write your code here\n",
     "df['Dscore'] = df['Wscore'] - df['Lscore']\n",
-    "avg = df['Dscore'].sum()/df['Dscore'].count()\n",
-    "df_above_avg = df[df['Dscore'] > avg]"
+    "df_above_avg = df[df['Dscore'] > df['Dscore'].mean()]"
    ]
   },
   {
@@ -2106,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -2394,35 +2405,278 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Season</th>\n",
+       "      <th>Wteam</th>\n",
+       "      <th>Wscore</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>174</th>\n",
+       "      <td>1985</td>\n",
+       "      <td>1328</td>\n",
+       "      <td>92.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>287</th>\n",
+       "      <td>1986</td>\n",
+       "      <td>1109</td>\n",
+       "      <td>91.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>783</th>\n",
+       "      <td>1987</td>\n",
+       "      <td>1380</td>\n",
+       "      <td>95.875000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>977</th>\n",
+       "      <td>1988</td>\n",
+       "      <td>1258</td>\n",
+       "      <td>111.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1268</th>\n",
+       "      <td>1989</td>\n",
+       "      <td>1258</td>\n",
+       "      <td>117.315789</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1560</th>\n",
+       "      <td>1990</td>\n",
+       "      <td>1258</td>\n",
+       "      <td>126.347826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1950</th>\n",
+       "      <td>1991</td>\n",
+       "      <td>1380</td>\n",
+       "      <td>112.312500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2246</th>\n",
+       "      <td>1992</td>\n",
+       "      <td>1380</td>\n",
+       "      <td>99.642857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2542</th>\n",
+       "      <td>1993</td>\n",
+       "      <td>1380</td>\n",
+       "      <td>101.875000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2842</th>\n",
+       "      <td>1994</td>\n",
+       "      <td>1380</td>\n",
+       "      <td>106.583333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3003</th>\n",
+       "      <td>1995</td>\n",
+       "      <td>1206</td>\n",
+       "      <td>102.833333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3305</th>\n",
+       "      <td>1996</td>\n",
+       "      <td>1206</td>\n",
+       "      <td>103.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3648</th>\n",
+       "      <td>1997</td>\n",
+       "      <td>1254</td>\n",
+       "      <td>94.142857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4070</th>\n",
+       "      <td>1998</td>\n",
+       "      <td>1395</td>\n",
+       "      <td>101.153846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4312</th>\n",
+       "      <td>1999</td>\n",
+       "      <td>1317</td>\n",
+       "      <td>95.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4695</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>1395</td>\n",
+       "      <td>95.647059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5013</th>\n",
+       "      <td>2001</td>\n",
+       "      <td>1395</td>\n",
+       "      <td>99.315789</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5201</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>1242</td>\n",
+       "      <td>92.888889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5660</th>\n",
+       "      <td>2003</td>\n",
+       "      <td>1395</td>\n",
+       "      <td>88.222222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5809</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>1194</td>\n",
+       "      <td>92.142857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6239</th>\n",
+       "      <td>2005</td>\n",
+       "      <td>1311</td>\n",
+       "      <td>91.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6460</th>\n",
+       "      <td>2006</td>\n",
+       "      <td>1190</td>\n",
+       "      <td>89.533333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7026</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>1440</td>\n",
+       "      <td>99.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7367</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>1440</td>\n",
+       "      <td>94.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7652</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>1377</td>\n",
+       "      <td>96.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8061</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>1440</td>\n",
+       "      <td>95.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8414</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>1449</td>\n",
+       "      <td>90.130435</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8683</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>1370</td>\n",
+       "      <td>87.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9036</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>1377</td>\n",
+       "      <td>86.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9333</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>1322</td>\n",
+       "      <td>92.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9683</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>1322</td>\n",
+       "      <td>90.733333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9861</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>1146</td>\n",
+       "      <td>97.142857</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Season  Wteam\n",
-       "1985    1102     71.000000\n",
-       "        1103     70.222222\n",
-       "        1104     72.095238\n",
-       "        1106     75.100000\n",
-       "        1108     85.842105\n",
-       "                   ...    \n",
-       "2016    1460     73.450000\n",
-       "        1461     73.416667\n",
-       "        1462     83.222222\n",
-       "        1463     78.238095\n",
-       "        1464     85.888889\n",
-       "Name: Wscore, Length: 10172, dtype: float64"
+       "      Season  Wteam      Wscore\n",
+       "174     1985   1328   92.800000\n",
+       "287     1986   1109   91.200000\n",
+       "783     1987   1380   95.875000\n",
+       "977     1988   1258  111.750000\n",
+       "1268    1989   1258  117.315789\n",
+       "1560    1990   1258  126.347826\n",
+       "1950    1991   1380  112.312500\n",
+       "2246    1992   1380   99.642857\n",
+       "2542    1993   1380  101.875000\n",
+       "2842    1994   1380  106.583333\n",
+       "3003    1995   1206  102.833333\n",
+       "3305    1996   1206  103.600000\n",
+       "3648    1997   1254   94.142857\n",
+       "4070    1998   1395  101.153846\n",
+       "4312    1999   1317   95.750000\n",
+       "4695    2000   1395   95.647059\n",
+       "5013    2001   1395   99.315789\n",
+       "5201    2002   1242   92.888889\n",
+       "5660    2003   1395   88.222222\n",
+       "5809    2004   1194   92.142857\n",
+       "6239    2005   1311   91.333333\n",
+       "6460    2006   1190   89.533333\n",
+       "7026    2007   1440   99.400000\n",
+       "7367    2008   1440   94.500000\n",
+       "7652    2009   1377   96.200000\n",
+       "8061    2010   1440   95.000000\n",
+       "8414    2011   1449   90.130435\n",
+       "8683    2012   1370   87.400000\n",
+       "9036    2013   1377   86.500000\n",
+       "9333    2014   1322   92.600000\n",
+       "9683    2015   1322   90.733333\n",
+       "9861    2016   1146   97.142857"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Write your code here\n",
-    "df.groupby(['Season','Wteam'])['Wscore'].mean()"
+    "meanW = df.groupby(['Season','Wteam'])['Wscore'].mean().reset_index()\n",
+    "meanW.loc[meanW.groupby('Season')['Wscore'].idxmax()]\n",
+    "\n"
    ]
   },
   {
@@ -2435,11 +2689,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Season  Wteam\n",
+       "1985    1102      5\n",
+       "        1103      9\n",
+       "        1104     21\n",
+       "        1106     10\n",
+       "        1108     19\n",
+       "                 ..\n",
+       "2016    1460     20\n",
+       "        1461     12\n",
+       "        1462     27\n",
+       "        1463     21\n",
+       "        1464      9\n",
+       "Name: Wteam, Length: 10172, dtype: int64"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "wins = df.groupby(['Season','Wteam'])\n",
+    "wins['Wteam'].count()\n"
    ]
   },
   {
@@ -2452,11 +2731,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Season  Wteam\n",
+       "1985    1385     27\n",
+       "1986    1181     32\n",
+       "1987    1424     33\n",
+       "1988    1112     31\n",
+       "1989    1328     28\n",
+       "1990    1247     29\n",
+       "1991    1116     30\n",
+       "1992    1181     28\n",
+       "1993    1231     28\n",
+       "1994    1163     27\n",
+       "1995    1116     26\n",
+       "1996    1269     31\n",
+       "1997    1242     31\n",
+       "1998    1242     33\n",
+       "1999    1181     32\n",
+       "2000    1409     29\n",
+       "2001    1181     29\n",
+       "2002    1153     30\n",
+       "2003    1166     29\n",
+       "2004    1390     29\n",
+       "2005    1228     32\n",
+       "2006    1181     30\n",
+       "2007    1242     30\n",
+       "2008    1272     33\n",
+       "2009    1272     31\n",
+       "2010    1242     32\n",
+       "2011    1242     32\n",
+       "2012    1246     32\n",
+       "2013    1211     30\n",
+       "2014    1455     33\n",
+       "2015    1246     34\n",
+       "2016    1242     29\n",
+       "Name: Wteam, dtype: int64"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "wins = df.groupby(['Season','Wteam'])['Wteam'].count()\n",
+    "wins.loc[wins.groupby('Season').idxmax()]"
    ]
   },
   {
@@ -2469,11 +2794,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Lteam\n",
+       "1101    60.586207\n",
+       "1102    59.201507\n",
+       "1103    64.117347\n",
+       "1104    64.374317\n",
+       "1105    61.675373\n",
+       "          ...    \n",
+       "1460    63.082915\n",
+       "1461    64.661972\n",
+       "1462    68.216117\n",
+       "1463    60.829213\n",
+       "1464    65.187063\n",
+       "Name: Lscore, Length: 364, dtype: float64"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "# Write your code here\n",
+    "df.groupby('Lteam')['Lscore'].mean()"
    ]
   },
   {
