--- a/2_data_science_basics.ipynb
+++ b/2_data_science_basics.ipynb
@@ -1753,7 +1753,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.-1"
+   "version": "3.8.undefined"
   },
   "nteract": {
    "version": "0.28.0"
