--- a/Individual_works/dsb_{s211615}.ipynb
+++ b/Individual_works/dsb_{s211615}.ipynb
@@ -1753,7 +1753,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.undefined"
+   "version": "3.8.19"
   },
   "nteract": {
    "version": "0.28.0"
